<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MADMiniProject</string>
    <string name="name">éHanger</string>
    <string name="admin">DASHBOARD</string>
    <string name="update">Update</string>
    <string name="idelete">Delete</string>
    <string name="code">Code</string>
    <string name="item">Name</string>
    <string name="action">Action</string>
    <string name="update_delete">Update/ Delete an item</string>
    <string-array name="sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Excel</item>
    </string-array>
    <string name="shop_now">SHOP NOw</string>
    <string name="girl_power_collection">Girl Power Collection</string>
    <string name="women">WOMEN\'S</string>
    <string name="description">Our hoodies are known for their exceptionally soft fleece and comfortable fit. Matching sweatpant available. Regular Fit. 68% cotton, 32% polyester.</string>
    <string name="price">2000</string>
    <string name="iname">Pink Sweatshirt</string>
    <string name="size">Size</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="insert">Insert an item</string>

    <string name="colorC">Color code</string>

    <string name="quantity">Quantity</string>
    <string name="iprice">Price</string>
    <string name="idescription">Description</string>
    <string name="upload_a_file">Upload a file</string>
    <string name="add_item">Add Item</string>
    <string name="date">dd/mm/yyyy</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="string_last_name" />

    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="postalc">Postal Code</string>
    <string name="tpno">Telephone No</string>
    <string name="shippingdetbtn">Shipping Details</string>
    <string name="save">Save and Continue</string>
    <string name="cancel">Cancel</string>
    <string name="shopname">éHanger</string>
    <string name="paymentdet">Payment Details</string>
    <string name="cardty">Card Type</string>
    <string name="cardno">Card Number</string>
    <string name="fullnm">Full Name</string>
    <string name="expdate">Expiration Date</string>
    <string name="seccode">Security Code</string>
    <string name="billdets">Billing Details</string>
    <string name="editb">Edit Billing Details</string>
    <string name="done">Done</string>
    <string name="credc">Credit Card</string>
    <string name="debc">Debit Card</string>
    <string name="cofp">Confirm and Pay</string>
    <string name="purchconf">Purchase Confirmation</string>
    <string name="total">Total</string>
    <string name="priceord">Rs. 5400.00</string>
    <string name="search">Search</string>
    <string name="crownring">Crown Ring</string>
    <string name="viewd">View Details</string>
    <string name="dring">Diamond Ring</string>
    <string name="delete">Delete Order</string>
    <string name="eHanger">eHanger</string>
    <string name="logintxt">Log in to your Account</string>
    <string name="userName">User Name</string>
    <string name="button1">Log in</string>
    <string name="button2">Sign up</string>
    <string name="forgotemail">Forgot Password ?</string>


    <string name="password">Password</string>
    <string name="profile" />

    <string name="telephone">Telephone</string>

    <string name="Update">Update</string>
    <string name="button">Button</string>
    <string name="email">Email</string>


    <string name="img" />
    <string name="user_name">User Name</string>
    <string name="signup">Create your own Account</string>
    <string name="signuptxt">Create your own Account</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="myprofiletxt">My Profile</string>
    <string name="img2" />
    <string name="passwordtxt">Forgot Password</string>
    <string name="passwordtxt2">Enter your email address below and we will send you an email with instruction to how change your password</string>
    <string name="send">Send</string>


    <string name="cont">Continue Shopping</string>
    <string name="pro">Proceed To Checkout</string>
    <string name="Title">e`Hanger</string>
    <string name="des1">
        Rs. 1600.00 \ Blue blouse \ Color:dark-blue \Size: M \ Quantity:1</string>
    <string name="des2">
        Rs.2550.00 \ Formal Shirt \     \    \   \ Color: brown \ Size: L \ Quantity:2</string>
    <string name="des3">
        Rs. 1050.00 \ Hoop Earrings\ Quantity:1</string>
    <string name="eb">Edit</string>
    <string name="db">Delete</string>
    <string name="first">Shopping Cart</string>
    <string name="second">Update Cart</string>
    <string name="fde">Rs. 1600.00 \ Blue blouse</string>

    <string name="colort">Color</string>

    <string name="ub">Update</string>
    <string name="third">Order Summary</string>
    <string name="sdes1">Rs. 1600.00 \ Blue blouse</string>
    <string name="sdes2">Rs.2550.00 \ Formal Shirt</string>
    <string name="sdes3">Rs. 1050.00 \ Hoop Earrings</string>

    <string name="gtotal">Grand Total</string>
    <string name="pur">Purchase</string>

    <string name="q1">1</string>
    <string name="q2">2</string>
    <string name="bptot">Rs.1600.00</string>
    <string name="fmtot">Rs.5100.00</string>
    <string name="hrtot">Rs.1050.00</string>
    <string name="ggtot">Rs.7750.00</string>

    <string name="dashboard">DASHBOARD</string>

    <string name="addpromo">Add Promotions</string>
    <string name="promo">Promotions</string>
    <string name="promodep">Promotion Description</string>
    <string name="catg">Categories</string>
    <string name="promocode">Promo Code</string>
    <string name="subpromo">Add</string>
    <string name="deletepromo">Delete /Update promotions</string>
    <string name="code1">Code</string>
    <string name="category1">Categories</string>
    <string name="action1">Action</string>
    <string name="deletepromo2">Delete</string>
    <string name="updatepromo">Update</string>
    <string name="confrim_password">Confrim Password</string>
    <string name="viewall">View All</string>
    <string name="editpromo">Edit</string>
    <string name="findid">Enter ID</string>
    <string name="btnid">Search</string>
    <string name="viewall2">View All</string>
    <string name="adminpanel">Admin Panel</string>
    <string name="adminpanel1">Admin Dashborad</string>
    <string name="admin1">Admin Dashboard</string>
    <string name="additems1">Add Items</string>
    <string name="addpromo1">Add Promotions</string>

    <string name="addI">ADD</string>
    <string name="UpdateI">UPDATE</string>
    <string name="DELETEi">DELETE</string>
    <string name="ItemsAdmin">Item Settings</string>

    <string name="shipupdate">Update Shipping Details</string>
    <string name="deleteship">Delete Details</string>

    <string name="productItemLayoutTV2">ItemName</string>
    <string name="productItemsLayoutTV3">ItemPrice</string>

    <string name="viewshipdet">View Customer Shipping Details</string>
    <string name="viewpaydet">View Customer Payment Details</string>
    <string name="additem2">Items</string>
    <string name="addpromo2">Promotions</string>
    <string name="shipping">View Shipping Details</string>
    <string name="welcome">Welcome to</string>
    <string name="button11">forgot password</string>
    <string name="lgin">Login</string>
    <string name="email1">E-mail</string>

    <string name="icode">ItemCode</string>

    <string name="thankyou">Thank You for shopping with us!</string>
    <string name="backhome">Back to Homepage</string>
    <string name="canord">Cancel Order</string>
    <string name="adminMaintainProductET1">Item Name</string>
    <string name="adminMaintainProductET2">Item Price</string>
    <string name="adminMaintainProductET3">Item Description</string>
    <string name="adminMaintainProductBTN1">Apply Changes</string>
    <string name="addprom">+promocode</string>
    <string name="rs">Rs.</string>
    <string name="zero">.00</string>


</resources>
