<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/marbbb"
    tools:context=".ViewShipPay">

    <Button
        android:id="@+id/viewshipd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#6470B3"
        android:text="@string/viewshipdet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewpayd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#6470B3"
        android:text="@string/viewpaydet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.715" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="138dp"
        android:layout_height="50dp"
        android:text="@string/shopname"
        android:textColor="#0B0A0A"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/dancing_script"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />
</androidx.constraintlayout.widget.ConstraintLayout>